--- a/reference.bib
+++ b/reference.bib
@@ -1,3 +1,14 @@
+@article{sharma2015array,
+  title={Array Interleaving An Energy Efficient Data Layout Transformation},
+  author={Sharma, Namita and Panda, Preeti Ranjan and Catthoor, Francky and Raghavan, Praveen and Aa, Tom Vander},
+  journal={ACM Transactions on Design Automation of Electronic Systems (TODAES)},
+  volume={20},
+  number={3},
+  pages={44},
+  year={2015},
+  publisher={ACM}
+}
+
 @inproceedings{DL,
   title={DL: A data layout transformation system for heterogeneous computing},
   author={Sung, I-Jui and Liu, Geng Daniel and Hwu, Wen-Mei W},
@@ -294,7 +305,7 @@ url = {https://www.synopsys.com/dw/doc.php/ds/es/40LP_Duet_memory_logic_DS.pdf}
 
 @inproceedings{sharma2013data,
   title={Data memory optimization in LTE downlink},
-  author={Sharma, Namita and Aa, TV and Agrawal, Prashant and Raghavan, Praveen and Panda, Preeti Ranjan and Catthoor, Francky},
+  author={Sharma, Namita and Aa, Tom Vander and Agrawal, Prashant and Raghavan, Praveen and Panda, Preeti Ranjan and Catthoor, Francky},
   booktitle={Acoustics, Speech and Signal Processing (ICASSP), 2013 IEEE International Conference on},
   pages={2610--2614},
   year={2013},
