--- a/LayoutStorageOpt.tex
+++ b/LayoutStorageOpt.tex
@@ -184,12 +184,13 @@ The overall number of memory accesses is:
 		\textit{25 loop iterations $\times$ 1 accesses per iteration = 25 memory accesses}.
 	\end{equation}	 	
 
-A quick estimation for the difference in the energy consumption between the approaches presented in Fig.~\ref{fig:motivation} can be calculated using a simple energy model for the memory banks.
-The model is based on simple, yet realistic, estimations for the dynamic and static energy on the memory banks.
+A quick estimate of the difference in the energy consumption between the approaches presented in Fig.~\ref{fig:motivation} can be found using a realistic energy model for the memory banks.
+The energy model, which has been also presented in \cite{sharma2015array}, is derived from synthesized memory models presented in Sec. 4.
+The model is based on realistic estimates of the dynamic and static energy in the memory banks.
 The scope is to illustrate the motivation for this work, without extensively describing the detailed memory model characteristics. 
 The target architecture and the energy models are described in depth in Sec. 4. 
 For the simple model in this chapter, we assume that the static energy is 30\% of the dynamic energy, which is a rational approximation for small memory banks with sizes between 1KB and 16KB.
-The static energy increases linearly with the memory size, which is a good approximation based on the detailed models.
+The static energy increases linearly with the memory size, which is a good approximation as also demonstrated by the detailed models in Sec. 4.
 Similarly the approximation for the correlation between the dynamic energy and the memory size is an approximation, which is simple but sufficiently accurate for the motivational example.
 
 We assume that the energy cost of accessing a memory bank the size of one array is 1E, while the average leakage energy in the time needed for the execution of one loop iteration is 0.3E. 
@@ -246,6 +247,18 @@ Again, reconfigurable platforms are not considered.
 The authors in \cite{Ben00b} present a methodology to generate a static application-specific memory hierarchy. 
 Later, they extend their work in \cite{Ben00c} to a reconfigurable platform with multiple memory banks. 
 
+In \cite{dymaxion} the authors tackle the problem of sub-optimal data structure layouts in GPUs with a large number of parallel cores, especially for programs that are designed with a CPU memory interface in mind. 
+An API is presented, that allows programmers to improve CUDA programs by optimizing memory mappings in order to increase the efficiency of memory accesses. 
+The main differences of the current work are the platform and the types of code transformations. 
+We focus on an SIMD CPU and a dynamic clustered scratchpad memory compared to multicore GPUs and a static memory. 
+We differentiate by focusing on interleaving as the preferred code transformation, being suitable for the target applications.
+Another work that discusses memory layout for GPUs is presented in \cite{DL}.
+The authors focus on off-chip DRAM memory optimization using a number of data layout transformations. 
+We differentiate by focusing on the memory closest to the CPU. We also study data interleaving while the main focus in \cite{DL} is the transformations that increase data parallelism, which is more important for their multicore GPU architecture.
+In \cite{3D} a number of common data reorganization operations such as shuffle, pack/unpack, swap, transpose, and layout transformations are presented. 
+The goal is to study the cost of applying these operations in the memory at run-time. The target memory is 3D-stacked DRAM and additional hardware is employed in order to efficiently perform the reorganization operations with a low overhead. 
+Apart from the different type of platform, the current work differentiates in the type of data reorganizations and the mapping of the reorganized data to the scratchpad memory at compilation time. 
+
 The authors in \cite{abraham1999automatic}, \cite{jacob1996analytical} and \cite{li1999hardware} present methodologies for designing memory hierarchies.
 Design methods with main focus on the traffic and latencies in the memory architecture are presented in \cite{chen1999loop}, \cite{grun2000mist}, \cite{jantsch1994hardware} and \cite{passes1995multi}.
 Improving memory energy efficiency based on a study of access patterns is discussed in \cite{kandemir2001improving}.
@@ -261,14 +274,14 @@ The variations in memory needs during the lifetime of an application are studied
 Different system scenarios capture the application's different resource requirements that change dynamically at run-time.
 Many possible memory platform configurations and data-to-memory assignments are studied as system scenario parameters, which lead to a large exploration space.
 
+The contribution of the proposed work is the development of a combined approach that investigates the interleaving and memory mapping options for a reconfigurable SIMD architecture.  
+The current work combines and expands in a non-trivial way, the interleaving exploration presented in \cite{sharma2013data} and the data to memory mapping methodology presented in \cite{filippopoulos2013exploration}. 
 The current work is more than a simple application of the two approaches, one after the other.
-Such an approach cannot always guarantee the optimal results.
-The reason is that for each different interleaving solutions, there is a different corresponding optimal memory mapping solution.
-However, an interleaving solution that results in less access holes than another, can lead to a less optimal memory mapping.
-In general, the optimal interleaving solution does not always lead to the optimal data-to-memory mapping solution.
-The reason is that the interleaving solution adds a number of constraints on the mapping of the interleaving data into the memory. 
+Such an approach cannot always guarantee a viable solution.
+The reason is that for each different interleaving solution, there are a number of constraints on the placement of the data into the memory due to hardware limitations.
+If the constraints are not propagated into the data-to-memory mapping step, the final solution suffers from data conflicts.
 Different interleaving solutions introduce different constraints. 
-Therefore, there is a need to develop an integrated methodology for the achieving the improvements of both approaches.
+Therefore, there is a need to develop an integrated methodology to achieve the improvements of both the approaches.
 
 \section{Target Architecture and Energy Models}
 \label{sec:platform}
@@ -282,11 +295,10 @@ For more complex architectures the interconnection cost should be considered and
 Although power gating can be applied to the bus when only a part of a longer bus is needed, an accurate model of the memory wrapper and interconnection must be developed, which is beyond the scope of the current work.
 The SIMD vector FU is assumed to perform instructions on multiple data.
 
-The proposed architecture uses scratch-pad memories and no cache memory is included in the current study.
-The main reason is that the data can be allocated on the scratchpad memory during compilation by the designer.
-Software controlled allocation is a significant feature for the current methodology, as the allocation of data can be fully determined by the designer during design-time.
-On the other hand, the hardware control automatically copies the data into the cache and resolves any hits or misses.
-The basic principles of the methodology are still applicable, but some modifications would be needed to deal with cache memories.
+Improving temporal locality of data accesses in cache is indeed important. 
+The proposed architecture uses scratch-pad memories, however, and no cache memory is included in the current study.
+Software controlled allocation is a significant feature for the current methodology, as the allocation of data can be fully determined by the designer at design-time.
+The basic principles of the methodology are still applicable for hardware controlled caches, but some modifications would be needed to deal with the automatic resolution of hits and misses.
 Temporal locality and data reuse are taken into consideration during the interleaving exploration.
 
 The methodology explores different interleaving and data to memory mapping options for the reconfigurable architecture.
@@ -307,7 +319,10 @@ Thus, the accuracy of the models influence the decisions taken during the design
 
 The dynamic memory organization is constructed using commercially available SRAM memory models (MM).
 For those models delay and energy numbers are derived from a commercial memory compiler.
-The commercial memory compiler is one of the state-of-the-art compilers. The logic libraries supporting a wide range of foundries and process technologies from 250nm to 28nm. The memories are optimized for low power, high performance and high density. The 40nm library was chosen for the current work. The datasheet can be found in \cite{Virage}.
+The commercial memory compiler is part of DesignWare Memory Compilers provided by Synopsys.
+The logic libraries support a wide range of foundries and process technologies from 250nm to 28nm. 
+The memories are optimized for low power, high performance and high density. A 40nm library was chosen for the current work.  
+Of confidentiality reasons we are not allowed to reveal details of the compiler or process and the presented numbers are relative.
 In addition, experimental standard cell-based memories (SCMEM) \cite{Mei11}  are  considered for smaller memories due to their energy and area efficiency for reasonably small storage capacities, as argued in \cite{Mei10}. 
 The standard cell-based memories are synthesized using Cadence RTL compiler for TSMC 40nm standard library. 
 Afterwards, power simulations on the synthesized design are carried out using Synopsys PrimeTime, in order to obtain energy numbers.
@@ -374,8 +389,7 @@ The HDL model of the processor is synthesized using Cadence RTL compiler \cite{c
 
 For efficient utilization of the vector FU, the register file has a wide interface with the clustered scratch-pad memory. 
 Since the target architecture is a configurable processor that can be customized in various ways, the standard evaluation and execution mechanism is to run the programs on a processor simulator. 
-An XML based language is used to describe the architecture, and a cycle-accurate simulator of the processor is used to simulate the generated code on the architecture.
-An XML based language is used to describe the architecture, and a cycle-accurate simulator of the processor is used to simulate the generated code on the architecture. The XML provides a structural way of describing the architecture presented in Fig. 2 including the different components, the parameters of each component and the relationship between them. The XML description generates a graphical representation of the architecture and is the input for the simulator presented in \cite{xml}. The chosen simulator is developed for coarse-grained reconfigurable architectures and is suitable in our case, because of the dynamic parameters of our architecture.
+An XML based language is used to describe the architecture, and a cycle-accurate simulator of the processor is used to simulate the generated code on the architecture. The XML provides a structural way of describing the architecture presented in Fig. 2 including the different components, the parameters of each component, and the relationship between them. The XML description generates a graphical representation of the architecture and is the input for the simulator as presented in \cite{xml}. The chosen simulator is developed for coarse-grained reconfigurable architectures and is suitable in our case, because of the dynamic parameters of our architecture.
  
 The energy consumption information for different types of instructions and different widths is available for the FU models.
 The width of the FU corresponds to the number of pairs of array elements on which the specific instruction is performed.
@@ -441,6 +455,17 @@ The mapping exploration takes all the interleaving constraints into consideratio
 Thus, the data-to-memory mapping solutions using the constraints are in general different from the solutions provided in a conventional approach.
 The propagation of the constraints is explained in more detail later. 
 
+The application is fully analyzed at design-time, because of the time consuming nature of the task. 
+The access patterns are extracted in software and the possible interleaving options are explored. 
+The mapping to the specific target architecture is also fully decided at design-time.
+The data-to-memory mapping exploration takes into consideration the platform and code limitation and proposes a mapping without data and bank conflicts.
+The employment of a scratchpad memory architecture is crucial for this.
+In contrast to cache memory systems, in which the mapping of data elements is done at run-time, in scratchpad memory systems the mapping is performed by the programmer or the compiler \cite{ishitobi2007code}. 
+Unlike the cache memory, the scratchpad memory does not need tag search operations and it is the responsibility of the programmers or compilers to correctly allocate code and data on the scratchpad memory \cite{steinke2002assigning}.
+This is possible for small embedded systems designed to run one or a limited set of specific applications. 
+For other types of systems and applications, a cache memory can be the preferred solution as the detection of a cache hit or miss is done automatically and any conflicts can also be resolved by the platform at run-time.
+In our case, the application and the memory system are fully analyzed and the allocation of data to a scratchpad memory can be easily done and offers an energy efficient solution.
+
 \subsection{Formal Model Representation of Access Patterns }
 
 A representation model for the memory access patterns is employed in order to formally present each step of the methodology.
@@ -502,13 +527,13 @@ Thus, the overall number of memory access in the second case is reduced by half 
 Given the input from the previous step, we explore the mapping of the interleaved data to the memory architecture.
 A clustered memory organisation with up to five memory banks of varying sizes is explored. 
 The limitation in the number of memory banks is necessary in order to keep the interconnection cost between the processing element (PE) and the memories constant through exploration of different architectures. 
-There are two main reason for exploring architectures up to five memory banks.
+There are two main reasons for exploring architectures up to five memory banks.
 Firstly, the energy gains achieved by increasing the number of memory banks in the memory architecture are nearly saturated even for five banks.
 In \cite{filippopoulos2013exploration} a group of different applications were studied with regard to their energy consumption on a clustered memory architecture consisting of up to five memory banks.
-The results shows that depending on the application, the energy gains started to saturate after adding a third or a fourth bank and become far smaller when adding a fifth bank.
-Thus, for most applications a memory architecture with five memory banks already provides more than necessary reconfiguration options.  
+The results show that depending on the application, the energy gains start to saturate after adding a third or a fourth bank and become insignificant when adding a fifth bank.
+Thus, for most applications a memory architecture with five memory banks already provides the necessary reconfiguration options.  
 Secondly, the overhead increases exponentially with the number of memory banks, due to the increased complexity of the memory architecture. 
-Therefore, a memory architecture with six banks is not a potentially efficiency options due to the high overhead and the very low energy gain.
+Therefore, memory architectures with six or more banks are typically not efficient options due to the high overhead and the low energy gain.
 
 The decision to use memory banks with varying sizes on the clustered memory organization increases the reconfiguration options and consequently the potential energy gains. 
 In general, smaller memories are more energy efficient compared to larger memories banks. 
@@ -541,12 +566,12 @@ The mapping step is performed based on these constrains.
 
 \subsection{Benchmark Applications}
 
-Interleaving is an energy optimization technique for the target set of benchmark applications, which are characterized by holes in their access patterns.
-The applications that benefit most from the proposed methodology are characterized by having access patterns with holes.
+Array Interleaving is a data layout transformation for combining the storage of multiple arrays, so that blocks of data from different arrays are stored contiguously, with the objective of reducing the number of memory accesses through better spatial locality \cite{sharma2015array}.
+The target applications on the current work benefit most from the proposed methodology, because they are characterized by having access patterns with holes.
 Interleaving is a widely used technique that fits the goal of generating more compact sets of data.
-Thus, it is the chosen data layout optimization.
-Other optimization techniques can be complementary to the interleaving step of the methodology, if they are applied prior to the interleaving step.
-Otherwise, the methodology needs to be modified in order to be compatible with more complex optimizations.
+An important contribution of the work is the combination of the interleaving optimization with data to memory mapping. 
+Having shown the benefits of this, future work can include extending the methodology to be compatible with additional layout optimization techniques.
+
 Applications with holes in their access pattern can be found on several application domains.
 The current study includes representative candidates from three different domains, namely the multimedia, the wireless and the equation solver domains.
 Suitable applications can also be found on other areas.
