--- a/reference.bib
+++ b/reference.bib
@@ -1,3 +1,22 @@
+@inproceedings{address,
+  title={Software controlled memory layout reorganization for irregular array access patterns},
+  author={Cho, Doosan and Issenin, Ilya and Dutt, Nikil and Yoon, Jonghee W and Paek, Yunheung},
+  booktitle={Proceedings of the 2007 international conference on Compilers, architecture, and synthesis for embedded systems},
+  pages={179--188},
+  year={2007},
+  organization={ACM}
+}
+
+@inproceedings{40nm,
+  title={Resolving the memory bottleneck for single supply near-threshold computing},
+  author={Gemmeke, Tobias and Sabry, Mohamed M and Stuijt, Jan and Raghavan, Praveen and Catthoor, Francky and Atienza, David},
+  booktitle={Design, Automation and Test in Europe Conference and Exhibition (DATE), 2014},
+  pages={1--6},
+  year={2014},
+  organization={IEEE}
+}
+
+
 @article{sharma2015array,
   title={Array Interleaving An Energy Efficient Data Layout Transformation},
   author={Sharma, Namita and Panda, Preeti Ranjan and Catthoor, Francky and Raghavan, Praveen and Aa, Tom Vander},
